# easy_tracer_v2

./: README.md
cpu/: CMakeLists.txt
cpu/lib/: const.hpp  easy_tracer_v2.hpp  utils.hpp
cpu/lib/accel/: accel.cpp  accel.hpp  accel_bvh.cpp  accel_bvh.hpp  accel_naive.cpp  accel_naive.hpp  box.cpp  box.hpp
cpu/lib/bxdf/: bxdf.cpp  bxdf.hpp  bxdf_disney.cpp  bxdf_disney.hpp  bxdf_ggx.cpp  bxdf_ggx.hpp  bxdf_gtr1.cpp  bxdf_gtr1.hpp  bxdf_lambertian.cpp  bxdf_lambertian.hpp  bxdf_phong.cpp  bxdf_phong.hpp  bxdf_rough.cpp  bxdf_rough.hpp  bxdf_specular.cpp  bxdf_specular.hpp
cpu/lib/camera/: camera.cpp  camera.hpp  camera_convex.cpp  camera_convex.hpp  camera_perspective.cpp  camera_perspective.hpp
cpu/lib/geometry/: curve.cpp  curve.hpp  direction.cpp  direction.hpp  geometry.cpp  geometry.hpp  global.cpp  global.hpp  plane.cpp  plane.hpp  point.cpp  point.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
cpu/lib/image/: image.cpp  image.hpp
cpu/lib/light/: light.cpp  light.hpp  light_direction.cpp  light_direction.hpp  light_global.cpp  light_global.hpp  light_point.cpp  light_point.hpp  light_triangle.cpp  light_triangle.hpp
cpu/lib/parser/: parser_scene.cpp  parser_scene.hpp
cpu/lib/random/: random.cpp  random.hpp  random_mt19937.cpp  random_mt19937.hpp
cpu/lib/ray/: ray.cpp  ray.hpp  ray_hit.cpp  ray_hit.hpp
cpu/lib/resource/: emittor.cpp  emittor.hpp  resource.cpp  resource.hpp  resource_group.cpp  resource_group.hpp  resource_light_direction.cpp  resource_light_direction.hpp  resource_light_global.cpp  resource_light_global.hpp  resource_light_point.cpp  resource_light_point.hpp  resource_light_triangle.cpp  resource_light_triangle.hpp  resource_mesh.cpp  resource_mesh.hpp  resource_plane.cpp  resource_plane.hpp  resource_sphere.cpp  resource_sphere.hpp  surface.cpp  tiny_obj_loader.h
cpu/lib/sampler/: onb.cpp  onb.hpp  sampler.cpp  sampler.hpp  sampler_disney.cpp  sampler_disney.hpp  sampler_ggx.cpp  sampler_ggx.hpp  sampler_glass.cpp  sampler_glass.hpp  sampler_gtr1.cpp  sampler_gtr1.hpp  sampler_lambertian.cpp  sampler_lambertian.hpp  sampler_reflection.cpp  sampler_reflection.hpp  sampler_refraction.cpp  sampler_refraction.hpp
cpu/lib/tensor/: mat3.cpp  mat3.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
cpu/lib/texture/: texture.cpp  texture.hpp  texture_color.cpp  texture_color.hpp  texture_simple.cpp  texture_simple.hpp
cpu/scene/: scene01_basic.txt  scene02_bunny_1k.txt  scene03_axes.txt  scene04_cornellbox.txt  scene05_bunny_in_box.txt  scene05_cornellbox_phong.txt  scene06_ggx.txt  scene07_gtr1.txt  scene08_disney.txt  scene09_glass.txt  scene10_global.txt  scene11_buddha.txt  scene12_reversed_cornellbox.txt  scene13_bezier.txt  scene14_bspline.txt  scene15_depth_of_field.txt  scene16_texture.txt  scene17_chess.txt  scene18_whitted.txt  scene19_mis.txt  test.txt
cpu/shader/: shader_bpt_mis.cpp  shader_forward_mis.cpp  shader_naive.cpp  shader_nee.cpp  shader_phong.cpp  shader_smooth_forward_mis.cpp  shader_whitted.cpp
cpu/test/: test_box.cpp  test_camera.cpp  test_intersection.cpp  test_rand.cpp  test_sampler.cpp  test_vector.cpp
